#21 (add) New functions with websockets

--- a/testFiles/testWS.html
+++ b/testFiles/testWS.html
@@ -10,7 +10,7 @@
 </body>
 </html>
 <script>
-  var socket = new WebSocket('ws://localhost:1337/');
+  var socket = new WebSocket('ws://rpplanner-api.herokuapp.com/');
   console.log("test");
   const id = 101938;
 
