--- a/testFiles/testWSlocal.html
+++ b/testFiles/testWSlocal.html
@@ -17,6 +17,7 @@
   socket.onopen = function (event) {
     const content = {
       type: 'testId',
+      emitter: 'test',
       status: 'ok',
       data:{
           id,
@@ -25,7 +26,7 @@
     socket.send(JSON.stringify(content)); 
 
     socket.onmessage = function (message) {
-      const data = JSON.parse(message.data);
+      const data = JSON.parse(message);
       console.log(data);
     };
 };
